# 201control

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_SimpleModel.cc  simulate
lib/: CMakeLists.txt  glfw_adapter.cc  glfw_dispatch.cc  lodepng.cpp  platform_ui_adapter.cc  simulate.cc  uitools.c
lib/include/: lodepng.h
meshes/201/: 201.xml  201_1.xml  base_link.STL  link1.STL  link10.STL  link2.STL  link3.STL  link4.STL  link9.STL
meshes/RobBIE/: CMakeLists.txt  RobBIE.xml  package.xml
meshes/RobBIE/config/: joint_names_RobBIE.yaml
meshes/RobBIE/launch/: display.launch  gazebo.launch
meshes/RobBIE/meshes/: right_ABAD.STL  right_hip.STL  right_knee.STL
meshes/RobBIE/urdf/: RobBIE.csv  RobBIE.urdf
meshes/RobBIE/xml/: RobBIE.xml
meshes/RobBIE/xml/meshes/: left_ABAD.STL  left_foot.STL  left_hip.STL  left_knee.STL  right_foot.STL
meshes/RobBIE_Sim_3D_PointFoot_V1/: RobBIE_Sim_3D.xml  left_abad_link.STL  left_calf_link.STL  left_leg_link.STL  right_abad_link.STL  right_calf_link.STL  right_leg_link.STL
meshes/RobBIE_Sim_3D_PointFoot_V2/: Link_Left_Abd.STL  Link_Left_Hip.STL  Link_Left_Knee.STL  Link_Right_Abd.STL  Link_Right_Hip.STL  Link_Right_Knee.STL  RobBIE_DM_Sim_PointFoot.urdf  RobBIE_DM_Sim_PointFoot.xml
meshes/RobBIE_Sim_3D_PointFoot_V3/: Link_Left_Abd.STL  Link_Left_Hip.STL  Link_Left_Knee.STL  Link_Right_Abd.STL  Link_Right_Hip.STL  Link_Right_Knee.STL  RobBIE_DM_Sim_Fixed_v3.xml
meshes/RobBIEv2/: RobBIE.urdf  RobBIEv2.xml  link1.STL  link10.STL  link11.STL  link12.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL  link7.STL  link8.STL  link9.STL
src/: CMakeLists.txt  JacLeft.cpp  SimpleModelController.h  controller.cpp  controller.h  track.h
src/log/: logFile.cpp  logFile.h
src/parameters/: parameters.cpp  parameters.h
src/robbie/: Robbie.cpp  Robbie.h  calculateRobBIE.cpp  calculateRobBIE.h
src/tools/: tools.cpp  tools.h
test/: test_imuRotation.cpp  test_k.cpp  test_network.cpp  test_newEst.cpp  test_standing.cpp
